--- a/web/index.html
+++ b/web/index.html
@@ -12,9 +12,9 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/shopzy.png" href="/shopzy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-commerce</title>
+    <title>Shopzy</title>
   </head>
   <body>
     <div id="root"></div>
